# fast_g3

./: Makefile  meson.build  pyproject.toml
fast_g3/: __init__.py  g3file.py
src/: fast_g3.cpp  fast_g3_core.cpp
